Commited by Jenkins build#4.

--- a/class-ontoworkflow.html
+++ b/class-ontoworkflow.html
@@ -565,7 +565,7 @@
 
                         <li>
 
-                          <a href="class-provplan.html" title="'Plan' - There exist no prescriptive requirement on the nature of plans, their representation, the actions or steps they consist of, or ...">prov:Plan</a>
+                          <a href="class-provplan.html" title="'Plan' - A plan is an entity that represents a set of actions or steps intended by one or more agents to ...">prov:Plan</a>
 
                           <ul>
 
