--- a/class-provplan.html
+++ b/class-provplan.html
@@ -564,7 +564,7 @@
                         <li><a href="entities-tree-classes.html">owl:Thing</a>
 
                           <ul>
-                            <li><a style="font-weight: bold;" title="'Plan' - There exist no prescriptive requirement on the nature of plans, their representation, the actions or steps they consist of, or ...">prov:Plan</a>
+                            <li><a style="font-weight: bold;" title="'Plan' - A plan is an entity that represents a set of actions or steps intended by one or more agents to ...">prov:Plan</a>
 
                             
                                 <ul>
@@ -621,7 +621,7 @@
             </div>
             <div class="panel-body">
 
-                There exist no prescriptive requirement on the nature of plans, their representation, the actions or steps they consist of, or their intended goals. Since plans may evolve over time, it may become necessary to track their provenance, so plans themselves are entities. Representing the plan explicitly in the provenance can be useful for various tasks: for example, to validate the execution as represented in the provenance record, to manage expectation failures, or to provide explanations. - A plan is an entity that represents a set of actions or steps intended by one or more agents to achieve some goals.
+                A plan is an entity that represents a set of actions or steps intended by one or more agents to achieve some goals. - There exist no prescriptive requirement on the nature of plans, their representation, the actions or steps they consist of, or their intended goals. Since plans may evolve over time, it may become necessary to track their provenance, so plans themselves are entities. Representing the plan explicitly in the provenance can be useful for various tasks: for example, to validate the execution as represented in the provenance record, to manage expectation failures, or to provide explanations.
             </div>
           </div>
            </div></div>
